# idmodels

./: README.md  pyproject.toml
.github/workflows/: pythonapp-workflow.yml
requirements/: requirements-dev.txt  requirements.txt
src/idmodels/: gbq.py  gbqr.py  preprocess.py  sarix.py  utils.py
tests/integration/: test_gbqr.py  test_sarix.py
tests/integration/data/: README.md  plot_test_data.R
tests/integration/data/UMass-gbqr_no_reporting_adj/: 2024-01-06-UMass-gbqr_no_reporting_adj.csv
tests/integration/data/UMass-sarix_p6_4rt_thetashared_sigmanone/: 2024-01-06-UMass-sarix_p6_4rt_thetashared_sigmanone.csv
tests/unit/gbqr/: test_drop_level_feats.py
