[project]
name = "idmodels"
description = "A Python module for modeling infectious disease."
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

dependencies = [
    "iddata @ git+https://github.com/reichlab/iddata",
    "lightgbm",
    "numpy",
    "pandas",
    "sarix @ git+https://github.com/elray1/sarix",
    "scikit-learn",
    "tqdm",
    "timeseriesutils @ git+https://github.com/reichlab/timeseriesutils"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff"
]

[project.urls]
Repository = "https://github.com/reichlab/idmodels.git"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
testpaths = [
    "tests",
]

[tools.setuptools]
packages = ["idmodels"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.dynamic]
version = {attr = "idmodels.__version__"}
